Added custom fonts for fields, fixed some visual bugs and started chat screen

--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -20,7 +20,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
@@ -42,7 +43,8 @@
         android:hint="Username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.84"
