--- a/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
@@ -19,6 +19,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintHorizontal_bias="0.2"
@@ -35,6 +37,8 @@
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:ems="10"
         android:hint="Username"
         android:inputType="textNoSuggestions"
