--- a/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
@@ -18,7 +18,8 @@
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -37,7 +38,8 @@
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,7 +60,8 @@
         android:hint="Choose your username"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="@+id/singnupText"
         app:layout_constraintHorizontal_bias="0.0"
