--- a/KetchUPClient/app/src/main/res/layout/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/login_screen.xml
@@ -35,6 +35,8 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Username"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
@@ -55,6 +57,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintStart_toStartOf="@+id/usernameText"
