--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -20,7 +20,8 @@
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
@@ -41,7 +42,8 @@
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
@@ -63,7 +65,8 @@
         android:hint="Choose your username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,6 +109,7 @@
         android:fontFamily="@font/patua_one"
         android:text="Create a new account:"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/appLogo"
