--- a/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
@@ -19,7 +19,8 @@
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -39,7 +40,8 @@
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintStart_toStartOf="@+id/userSingField"
@@ -60,7 +62,8 @@
         android:hint="Choose your username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
