--- a/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
@@ -19,7 +19,8 @@
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -39,7 +40,8 @@
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
@@ -61,7 +63,8 @@
         android:hint="Choose your username"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="@+id/singnupText"
