--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -40,7 +40,8 @@
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
         app:layout_constraintStart_toStartOf="@+id/welcomeText"
@@ -57,7 +58,8 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
-        android:textColorHint="@color/black"
+        android:textColorHint="#4A4A4A"
+        android:fontFamily="@font/patua_one"
         android:textColor="@color/black"
         android:inputType="textPassword"
         android:paddingStart="10dp"
@@ -74,6 +76,7 @@
         android:layout_marginTop="70dp"
         android:fontFamily="@font/patua_one"
         android:text="Welcome!"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/usernameText"
