Added mokups for user image and username in chat page

--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -53,7 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
