--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -35,7 +35,7 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -58,7 +58,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
