--- a/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
@@ -12,7 +12,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="20dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -34,7 +34,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="100dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:textColorHint="#4A4A4A"
