--- a/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -31,7 +31,7 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -53,7 +53,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="120dp"
         android:autofillHints=""
-        android:background="@drawable/custom_input"
+        android:background="@drawable/user_mokup"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
