--- a/KetchUPClient/app/src/main/res/layout/chat_menu.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_menu.xml
@@ -17,7 +17,9 @@
         app:layout_constraintBottom_toBottomOf="@+id/fabNewChat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:riv_oval="true" />
+        app:riv_mutate_background="true"
+        app:riv_oval="true"
+        tools:ignore="ImageContrastCheck" />
     <View
         android:id="@+id/ViewSupp"
         android:layout_width="1dp"
