--- a/KetchUPClient/app/src/main/res/layout/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_screen.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="@dimen/_16sdp"
         app:layout_constraintBottom_toTopOf="@id/sendButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
@@ -26,7 +26,7 @@
         android:maxLines="1"
         android:text="William"
         android:textAlignment="textStart"
-        android:paddingStart="@dimen/_20sdp"
+        android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_18sdp"
         app:layout_constraintBottom_toBottomOf="@+id/friendPFP"
@@ -66,13 +66,15 @@
         android:id="@+id/friendPFP"
         android:layout_width="@dimen/_43sdp"
         android:layout_height="@dimen/_43sdp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:bottomRightRadius="@dimen/_24sdp"
         android:background="@drawable/william_pfp"
+        android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:riv_corner_radius="30dip"
+        app:riv_mutate_background="true"
         app:riv_oval="true" />
 
     <FrameLayout
