--- a/KetchUPClient/app/src/main/res/layout/chat_menu.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_menu.xml
@@ -7,12 +7,12 @@
     android:padding="@dimen/_8sdp">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/pfp"
+        android:id="@+id/userPFP"
         android:layout_width="@dimen/_43sdp"
         android:layout_height="@dimen/_43sdp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/alice_pfp"
+        android:background="#B5B5B5"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@+id/fabNewChat"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +20,14 @@
         app:riv_mutate_background="true"
         app:riv_oval="true"
         tools:ignore="ImageContrastCheck" />
+
     <View
         android:id="@+id/ViewSupp"
         android:layout_width="1dp"
         android:layout_height="1dp"
-        app:layout_constraintBottom_toBottomOf="@+id/pfp"
-        app:layout_constraintTop_toTopOf="@id/pfp"
-        app:layout_constraintStart_toEndOf="@id/pfp"/>
+        app:layout_constraintBottom_toBottomOf="@+id/userPFP"
+        app:layout_constraintTop_toTopOf="@id/userPFP"
+        app:layout_constraintStart_toEndOf="@id/userPFP"/>
 
     <TextView
         android:id="@+id/textName"
@@ -37,13 +38,29 @@
         android:ellipsize="end"
         android:fontFamily="@font/patua_one"
         android:maxLines="1"
-        android:text="WonderAlice"
+        android:text=""
         android:textAlignment="center"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
         app:layout_constraintStart_toEndOf="@id/ViewSupp" />
+
+    <TextView
+        android:id="@+id/userStatus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/patua_one"
+        android:maxLines="1"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/dark_color"
+        android:textSize="@dimen/_10sdp"
+        app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
+        app:layout_constraintStart_toStartOf="@+id/textName"
+        app:layout_constraintTop_toBottomOf="@+id/textName" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabNewChat"
@@ -61,52 +78,54 @@
         app:tint="@color/dark_color"
         tools:layout_editor_absoluteY="11dp" />
 
-    <ScrollView
-        android:layout_width="391dp"
-        android:layout_height="701dp"
-        android:layout_marginTop="30dp"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pfp">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userPFP"
+        app:layout_constraintVertical_bias="0.0">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/usersRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:overScrollMode="never"
+            android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+
+        <TextView
+            android:id="@+id/errorMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/usersRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:orientation="vertical"
-                android:overScrollMode="never"
-                android:padding="@dimen/_20sdp"
-                android:visibility="visible"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
-            
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_gravity="center"/>
-            
-            <TextView
-                android:id="@+id/errorMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="@dimen/_24sdp"
-                android:layout_marginEnd="@dimen/_24sdp"
-                android:gravity="center"
-                android:textColor="@color/dark_color"
-                android:textSize="@dimen/_12sdp"
-                android:fontFamily="@font/patua_one"
-                android:visibility="gone"/>
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
+            android:fontFamily="@font/patua_one"
+            android:gravity="center"
+            android:textColor="@color/dark_color"
+            android:textSize="@dimen/_12sdp"
+            android:visibility="gone" />
 
 
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
