--- a/KetchUPClient/app/src/main/res/layout/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_screen.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/viewBackground"
@@ -17,29 +16,29 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
-        android:id="@+id/nameUser"
+        android:id="@+id/chatName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
         android:ellipsize="end"
         android:fontFamily="@font/patua_one"
         android:maxLines="1"
-        android:text="William"
+        android:text=""
         android:textAlignment="textStart"
         android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_18sdp"
-        app:layout_constraintBottom_toBottomOf="@+id/friendPFP"
+        app:layout_constraintBottom_toBottomOf="@+id/chatPFP"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/friendPFP"
-        app:layout_constraintTop_toTopOf="@+id/friendPFP"/>
+        app:layout_constraintStart_toEndOf="@+id/chatPFP"
+        app:layout_constraintTop_toTopOf="@+id/chatPFP"/>
     
     <View
         android:id="@+id/ViewSupp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="@dimen/_12sdp"
-        app:layout_constraintTop_toBottomOf="@id/friendPFP"/>
+        app:layout_constraintTop_toBottomOf="@id/chatPFP"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/charRecyclerView"
@@ -63,12 +62,12 @@
         app:layout_constraintStart_toStartOf="@id/viewBackground"/>
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/friendPFP"
+        android:id="@+id/chatPFP"
         android:layout_width="@dimen/_43sdp"
         android:layout_height="@dimen/_43sdp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/william_pfp"
+        android:background="@drawable/user_pfp_mokup"
         android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
