--- a/KetchUPClient/app/src/main/res/layout/item_friends.xml
+++ b/KetchUPClient/app/src/main/res/layout/item_friends.xml
@@ -10,8 +10,8 @@
         android:layout_width="@dimen/_43sdp"
         android:layout_height="@dimen/_43sdp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#B5B5B5"
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,17 +51,18 @@
         android:textSize="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="@id/friendPFP"
         app:layout_constraintStart_toEndOf="@id/friendPFP"
-        app:layout_constraintTop_toBottomOf="@+id/friendName" />
+        app:layout_constraintTop_toBottomOf="@+id/friendName"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/topDivider"
         android:layout_width="300dp"
         android:layout_height="1dp"
-        android:layout_marginStart="170dp"
-        android:layout_marginEnd="170dp"
+        android:layout_marginStart="200dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
