--- a/KetchUPClient/app/src/main/res/layout-land-night/chat_menu.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/chat_menu.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/dark_color"
     android:padding="@dimen/_8sdp">
 
     <com.makeramen.roundedimageview.RoundedImageView
@@ -39,8 +40,8 @@
         android:fontFamily="@font/patua_one"
         android:maxLines="1"
         android:text=""
-        android:textAlignment="center"
-        android:textColor="@color/dark_color"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
@@ -55,8 +56,8 @@
         android:fontFamily="@font/patua_one"
         android:maxLines="1"
         android:text=""
-        android:textAlignment="center"
-        android:textColor="@color/dark_color"
+        android:textAlignment="textStart"
+        android:textColor="#C8C7C7"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
         app:layout_constraintStart_toStartOf="@+id/textName"
@@ -67,15 +68,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:outlineAmbientShadowColor="@color/white"
-        android:outlineSpotShadowColor="@color/white"
+        android:outlineAmbientShadowColor="@color/dark_color"
+        android:outlineSpotShadowColor="@color/dark_color"
         android:src="@drawable/ic_add_user"
-        app:backgroundTint="#FFFFFF"
+        app:backgroundTint="@color/dark_color"
         app:borderWidth="0dp"
         app:layout_constraintTop_toTopOf="@id/textName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textName"
-        app:tint="@color/dark_color"
+        app:tint="#AAA8A8"
         tools:layout_editor_absoluteY="11dp" />
 
     <ProgressBar
@@ -92,7 +93,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +114,7 @@
             android:id="@+id/errorMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="start"
             android:layout_marginStart="@dimen/_24sdp"
             android:layout_marginEnd="@dimen/_24sdp"
             android:fontFamily="@font/patua_one"
@@ -129,13 +130,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:fontFamily="@font/patua_one"
         android:text="Chats"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_25sdp"
-        app:layout_constraintStart_toStartOf="@+id/userPFP"
-        app:layout_constraintTop_toBottomOf="@+id/userPFP" />
+        app:layout_constraintBottom_toBottomOf="@+id/userStatus"
+        app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
+        app:layout_constraintStart_toEndOf="@+id/userPFP"
+        app:layout_constraintTop_toTopOf="@+id/textName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
