--- a/KetchUPClient/app/src/main/res/layout-port-night/chat_menu.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/chat_menu.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_color"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="@dimen/_8sdp">
 
@@ -40,7 +41,7 @@
         android:maxLines="1"
         android:text=""
         android:textAlignment="center"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
@@ -56,7 +57,7 @@
         android:maxLines="1"
         android:text=""
         android:textAlignment="center"
-        android:textColor="@color/dark_color"
+        android:textColor="#C8C7C7"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
         app:layout_constraintStart_toStartOf="@+id/textName"
@@ -67,15 +68,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:outlineAmbientShadowColor="@color/white"
-        android:outlineSpotShadowColor="@color/white"
+        android:outlineAmbientShadowColor="@color/dark_color"
+        android:outlineSpotShadowColor="@color/dark_color"
         android:src="@drawable/ic_add_user"
-        app:backgroundTint="#FFFFFF"
+        app:backgroundTint="@color/dark_color"
         app:borderWidth="0dp"
         app:layout_constraintTop_toTopOf="@id/textName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textName"
-        app:tint="@color/dark_color"
+        app:tint="#AAA8A8"
         tools:layout_editor_absoluteY="11dp" />
 
     <ProgressBar
@@ -132,7 +133,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/patua_one"
         android:text="Chats"
-        android:textColor="@color/dark_color"
+        android:textColor="#FFFFFF"
         android:textSize="@dimen/_25sdp"
         app:layout_constraintStart_toStartOf="@+id/userPFP"
         app:layout_constraintTop_toBottomOf="@+id/userPFP" />
