--- a/KetchUPClient/app/src/main/res/layout/chat_menu.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_menu.xml
@@ -56,7 +56,7 @@
         android:maxLines="1"
         android:text=""
         android:textAlignment="center"
-        android:textColor="@color/dark_color"
+        android:textColor="#676767"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintEnd_toStartOf="@+id/fabNewChat"
         app:layout_constraintStart_toStartOf="@+id/textName"
