--- a/KetchUPClient/app/src/main/res/values/themes.xml
+++ b/KetchUPClient/app/src/main/res/values/themes.xml
@@ -13,8 +13,9 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="splashScreenTheme" parent="Theme.MaterialComponents.DayNight">
             <item name="android:windowBackground">@drawable/splash_image</item>
-            <item name="android:statusBarColor">#C6C6C6</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
+        <item name="android:statusBarColor" tools:targetApi="lollipop">?android:colorBackground</item>
     </style>
 </resources>
