--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="20dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -36,7 +36,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="100dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
