--- a/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/dark_color">
 
     <View
         android:id="@+id/viewBackground"
@@ -26,7 +27,7 @@
         android:text=""
         android:textAlignment="textStart"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_18sdp"
         app:layout_constraintBottom_toBottomOf="@+id/chatPFP"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +91,7 @@
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="text"
+        android:backgroundTint="#353535"
         android:paddingStart="@dimen/_16sdp"
         android:paddingEnd="@dimen/_16sdp"
         android:textColor="@color/black"
@@ -104,15 +106,16 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:clickable="true"
-        android:outlineAmbientShadowColor="@color/white"
-        android:outlineSpotShadowColor="@color/white"
-        app:backgroundTint="#FFFFFF"
+        android:outlineAmbientShadowColor="@color/dark_color"
+        android:outlineSpotShadowColor="@color/dark_color"
+        app:backgroundTint="@color/dark_color"
         app:layout_constraintBottom_toBottomOf="@+id/inputMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/inputMessage"
         app:maxImageSize="@dimen/_25sdp"
         app:srcCompat="@drawable/send_button_ic"
-        app:tint="@color/dark_color"
+        app:borderWidth="0dp"
+        app:tint="@color/white"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
